2005-04-13  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-04-13  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.c: set GIMP_CONFIG_PARAM_CONFIRM on
	the "font-path" property. Set GIMP_CONFIG_PARAM_IGNORE for
	"font-path-writable".

	* app/dialogs/preferences-dialog.c: don't use "font-path-writable".

	* app/core/gimp.c (gimp_restore)
	* app/text/gimp-fonts.c: handle --no-fonts similar to --no-data
	and allow to load the fonts later by pressing "Refresh" in the
	fonts dialog.

2005-04-13  Sven Neumann  <sven@gimp.org>

	* app/app_procs.c: register handler for the "GimpPaint" log domain.

	* app/core/gimpdatafactory.c (gimp_data_factory_init): don't load
	any data if TRUE is passed for no_data.

	* app/tools/gimppainttool.c (gimp_paint_tool_draw): handle a NULL
	brush gracefully.

2005-04-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c (gimp_image_convert): handle a NULL
	palette with GIMP_CUSTOM_PALETTE type, use the builtin mono
	palette as fallback.

	* app/dialogs/convert-dialog.c: handle empty palette container.

	* app/gui/gui-vtable.c (gui_pdb_dialog_new): removed unused code.

	* tools/pdbgen/pdb/convert.pdb: don't load the palettes implicitely.

	* app/pdb/convert_cmds.c: regenerated.

2005-04-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpimagedock.c (gimp_image_dock_image_changed):
	don't use the image container as display container.

2005-04-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdatafactory.[ch]: added gimp_data_factory_refresh().

	* app/actions/data-commands.c
	* tools/pdbgen/pdb/brushes.pdb
	* tools/pdbgen/pdb/convert.pdb
	* tools/pdbgen/pdb/gradients.pdb
	* tools/pdbgen/pdb/palettes.pdb
	* tools/pdbgen/pdb/patterns.pdb: use the new function.

	* app/pdb/brushes_cmds.c
	* app/pdb/convert_cmds.c
	* app/pdb/gradients_cmds.c
	* app/pdb/palettes_cmds.c
	* app/pdb/patterns_cmds.c: regenerated.

2005-04-12  Sven Neumann  <sven@gimp.org>
